eks/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "nginx-ingress"
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb 
  rules:
    - http:
        paths:
          - path: /nginx2
            pathType: Prefix
            backend:
              service:
                name: nginx-2
                port:
                  number: 80
          - path: /nginx1
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
